--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "classnames": "^2.5.1",
+    "fuse.js": "^7.0.0",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "readability-score": "^1.0.1",
     "sweetalert2": "^11.12.3",
+    "text-readability": "^1.1.0",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
