--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "classnames": "^2.5.1",
     "fuse.js": "^7.0.0",
+    "mathjs": "^13.0.3",
+    "natural": "^8.0.1",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
